Navbar added to the pages

--- a/css/order-page.css
+++ b/css/order-page.css
@@ -53,3 +53,8 @@ body{
 .switch-link:hover{
     color: orange;
 }
+@media only screen and (max-width: 990px){
+    .turn-off{
+        display: none;
+    }
+}
