--- a/css/closed-order.css
+++ b/css/closed-order.css
@@ -45,3 +45,8 @@ body{
 .switch-link:hover{
     color: orange;
 }
+@media only screen and (max-width: 990px){
+    .turn-off{
+        display: none;
+    }
+}
